--- a/queries/notebooks/General/ConfigExample.ipynb
+++ b/queries/notebooks/General/ConfigExample.ipynb
@@ -2,46 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3e10e761",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "22/04/08 07:15:58 WARN Utils: Your hostname, algorand-druid-and-spark resolves to a loopback address: 127.0.0.1; using 172.23.149.212 instead (on interface ens3)\n",
-      "22/04/08 07:15:58 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/ubuntu/.local/lib/python3.8/site-packages/pyspark/jars/spark-unsafe_2.12-3.2.1.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/04/08 07:15:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "22/04/08 07:15:59 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
     "config = pyspark.SparkConf().setAll([\n",
-    "    ('spark.executor.memory', '11g'), \n",
-    "    ('spark.executor.cores', '3'), \n",
-    "    ('spark.cores.max', '6'),\n",
-    "    ('spark.driver.memory','1g'),\n",
+    "    ('spark.executor.memory', '12g'), \n",
+    "    ('spark.executor.cores', '4'), \n",
+    "    ('spark.cores.max', '8'),\n",
+    "    ('spark.driver.memory','2g'),\n",
     "    ('spark.executor.instances', '1'),\n",
     "    ('spark.dynamicAllocation.enabled', 'true'),\n",
     "    ('spark.dynamicAllocation.shuffleTracking.enabled', 'true'),\n",
     "    ('spark.dynamicAllocation.executorIdleTimeout', '60s'),\n",
-    "    ('spark.dynamicAllocation.minExecutors', '0'),\n",
-    "    ('spark.dynamicAllocation.maxExecutors', '2'),\n",
+    "    ('spark.dynamicAllocation.minExecutors', '1'),\n",
+    "    ('spark.dynamicAllocation.maxExecutors', '4'),\n",
     "    ('spark.dynamicAllocation.initialExecutors', '1'),\n",
-    "    ('spark.dynamicAllocation.executorAllocationRatio', '1')\n",
+    "    ('spark.dynamicAllocation.executorAllocationRatio', '1'),\n",
+    "    ('spark.worker.cleanup.enabled', 'true'),\n",
+    "    ('spark.worker.cleanup.interval', '60'),\n",
+    "    ('spark.shuffle.service.db.enabled', 'true'),\n",
+    "    ('spark.worker.cleanup.appDataTtl', '60'),\n",
+    "    ('spark.jars.packages', 'org.mongodb.spark:mongo-spark-connector:10.0.2')\n",
     "])\n",
     "\n",
     "spark = SparkSession \\\n",
@@ -53,14 +43,6 @@
     "\n",
     "spark.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0bb862a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
