--- a/queries/notebooks/2_stakerDistribution.ipynb
+++ b/queries/notebooks/2_stakerDistribution.ipynb
@@ -49,7 +49,7 @@
     "config = pyspark.SparkConf().setAll([\n",
     "    ('spark.executor.memory', '12g'), \n",
     "    ('spark.executor.cores', '4'), \n",
-    "    ('spark.cores.max', '16'),\n",
+    "    ('spark.cores.max', '8'),\n",
     "    ('spark.driver.memory','2g'),\n",
     "    ('spark.executor.instances', '1'),\n",
     "    ('spark.dynamicAllocation.enabled', 'true'),\n",
@@ -286,6 +286,8 @@
    "source": [
     "# drop all unneccessary columns\n",
     "dfStaker = dfStaker.select(\"addr\", \"rewards_total\", \"created_at\")\n",
+    "#Staker are all accounts which got at least once rewards\n",
+    "dfStaker = dfStaker.where(dfStaker.rewards_total > 0)\n",
     "\n",
     "# calculate hom many algos paid out as rewards\n",
     "\n",
@@ -399,6 +401,7 @@
    ],
    "source": [
     "#write number of stakers in gold table\n",
+    "#how many stakers ever received a reward\n",
     "#append to get a history over the development\n",
     "addresses = dfStaker.count()\n",
     "newestRound = dfStaker.agg(F.max(\"created_at\")).collect()[0][0]\n",
@@ -572,6 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#counts how many transactions were sent from possible stakers to go online\n",
     "candidacies = dfOnline.count()\n",
     "newestRound = dfOnline.agg(F.max(\"applicationRound\")).collect()[0][0]\n",
     "\n",
@@ -1010,8 +1014,7 @@
     "\n",
     "bin_size = 50\n",
     "#distribute bins log(equally) over the whole data\n",
-    "#+1 because Rewards can be zero\n",
-    "mybins = np.logspace(np.log10(minRewards+1), np.log10(maxRewards), bin_size )\n",
+    "mybins = np.logspace(np.log10(minRewards), np.log10(maxRewards), bin_size )\n",
     "\n",
     "plt.figure()\n",
     "plt.hist(rewards, bins = mybins)\n",
