--- a/queries/notebooks/2_stakerDistribution.ipynb
+++ b/queries/notebooks/2_stakerDistribution.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0e3bed6e-30ae-43ed-9721-1cc001489ace",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "62ea7998-55cf-4df6-a020-02b15c0d4028",
    "metadata": {},
    "outputs": [],
@@ -69,66 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "d8c4764b-1aed-4b0f-84a2-99415c8b2ef6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "22/07/08 09:48:51 WARN Utils: Your hostname, algorand-druid-and-spark resolves to a loopback address: 127.0.0.1; using 172.23.149.212 instead (on interface ens3)\n",
-      "22/07/08 09:48:51 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "WARNING: An illegal reflective access operation has occurred\n",
-      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/home/ubuntu/.local/lib/python3.8/site-packages/pyspark/jars/spark-unsafe_2.12-3.2.1.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
-      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
-      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
-      "WARNING: All illegal access operations will be denied in a future release\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":: loading settings :: url = jar:file:/home/ubuntu/.local/lib/python3.8/site-packages/pyspark/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ivy Default Cache set to: /home/ubuntu/.ivy2/cache\n",
-      "The jars for the packages stored in: /home/ubuntu/.ivy2/jars\n",
-      "org.mongodb.spark#mongo-spark-connector added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-9adbc9de-f0bd-4e6e-a410-5bc6b62d2a59;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound org.mongodb.spark#mongo-spark-connector;10.0.2 in central\n",
-      "\tfound org.mongodb#mongodb-driver-sync;4.5.1 in central\n",
-      "\t[4.5.1] org.mongodb#mongodb-driver-sync;[4.5.0,4.5.99)\n",
-      "\tfound org.mongodb#bson;4.5.1 in central\n",
-      "\tfound org.mongodb#mongodb-driver-core;4.5.1 in central\n",
-      ":: resolution report :: resolve 3682ms :: artifacts dl 7ms\n",
-      "\t:: modules in use:\n",
-      "\torg.mongodb#bson;4.5.1 from central in [default]\n",
-      "\torg.mongodb#mongodb-driver-core;4.5.1 from central in [default]\n",
-      "\torg.mongodb#mongodb-driver-sync;4.5.1 from central in [default]\n",
-      "\torg.mongodb.spark#mongo-spark-connector;10.0.2 from central in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   4   |   1   |   0   |   0   ||   4   |   0   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-9adbc9de-f0bd-4e6e-a410-5bc6b62d2a59\n",
-      "\tconfs: [default]\n",
-      "\t0 artifacts copied, 4 already retrieved (0kB/20ms)\n",
-      "22/07/08 09:48:57 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/07/08 09:49:00 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "22/07/08 09:49:00 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "22/07/08 09:49:02 WARN ExecutorAllocationManager: Dynamic allocation without a shuffle service is an experimental feature.\n"
+      "20409720 [Thread-4] WARN  org.apache.spark.util.Utils  - Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "20410346 [Thread-4] WARN  org.apache.spark.ExecutorAllocationManager  - Dynamic allocation without a shuffle service is an experimental feature.\n"
      ]
     }
    ],
@@ -335,6 +285,7 @@
     "#keyreg is either a node which log in to participate in the network or log off\n",
     "dfTx = dfTx.filter(dfTx.txn_type == \"keyreg\")\n",
     "#distinguish between online and offline transactions, votefst is null when it was an offline application and otherwise the staker has applied to get online\n",
+    "#https://developer.algorand.org/docs/get-details/transactions/#key-registration-transaction\n",
     "dfTx = dfTx.withColumn(\"status\", F.when(F.col('txn_votefst').isNull(), \"offline\").otherwise(\"online\"))\n"
    ]
   },
@@ -687,88 +638,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d167201-bbaf-4be8-9c1e-6841b7b8ce43",
-   "metadata": {},
-   "source": [
-    "### Graph Preparation: Distribution of Start Time of Stakers in UnixTime"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4693568f-e9a9-4bd7-a3cf-3705ebd6b130",
-   "metadata": {},
-   "source": [
-    "Goal is to create a histogram when stakers started to participate in the network. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9fdef3f-8dfa-4fc5-8745-8f3ea63a9777",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#graph, histogram x-axis unix time when starting\n",
-    "graph = dfOnline.select(\"starttimeInSec\")\n",
-    "\n",
-    "#preparation for graph\n",
-    "graph = graph.collect()\n",
-    "\n",
-    "#convert row[\"data\"] to only data\n",
-    "time = [row[0] for (row) in graph]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e871e51f-2043-4ea2-8491-4c59854389b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#min\n",
-    "minUnixTime = dfOnline.agg(F.min(\"starttimeInSec\")).collect()[0][0]\n",
-    "\n",
-    "maxUnixTime = dfOnline.agg(F.max(\"starttimeInSec\")).collect()[0][0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76400071-c37b-4a63-b6f2-614697e93e48",
-   "metadata": {},
-   "source": [
-    "### Graph: Distribution of Start Time of Stakers in UnixTime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ba26b18-2b7f-4eed-bb62-e53b6e7cef95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#histogram x-axis round when starting participating\n",
-    "#how many bars in the histogram should be plotted\n",
-    "\n",
-    "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minUnixTime), np.log10(maxUnixTime), bin_size )\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.hist(time, bins = mybins)\n",
-    "#plt.rcParams[\"figure.figsize\"] = [7.50, 3.50]\n",
-    "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel(\"Unix Time\")\n",
-    "plt.ylabel(\"Number of Stakers\")\n",
-    "plt.title(\"Distribution of Staker Starting to Participate (Unix Time)\", loc ='center', pad = None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Staker_Start_Distribution_UnixTime.jpg', dpi= 200)\n",
-    "plt.show()\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "88682b27-81c5-423c-ac58-db5adfba2cf5",
    "metadata": {},
    "source": [
@@ -859,79 +728,6 @@
     "plt.ylabel(\"Number of Staker\")\n",
     "plt.title(\"Distribution of Staker Ending to Participate (Blockround)\", loc ='center', pad = None)\n",
     "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Staker_End_Distribution_Blockround.jpg', dpi= 200)\n",
-    "plt.show()\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e3eff0f4-937d-4822-83c4-ec19de739c11",
-   "metadata": {},
-   "source": [
-    "### Graph Preparation: Distribution of End Time of Stakers in UnixTime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbd9d76a-31ba-470c-bd80-551f2f818012",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#graph, histogram x-axis unix time when starting when going offline\n",
-    "graph = dfOffline.select(\"endtimeInSec\")\n",
-    "\n",
-    "#preparation for graph\n",
-    "graph = graph.collect()\n",
-    "\n",
-    "#convert row[\"data\"] to only data\n",
-    "time = [row[0] for (row) in graph]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4db93700-6437-4c38-8346-10cd6613708c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#min\n",
-    "minOffEndtimeSec = dfOffline.agg(F.min(\"endtimeInSec\")).collect()[0][0]\n",
-    "\n",
-    "maxOffEndtimeSec = dfOffline.agg(F.max(\"endtimeInSec\")).collect()[0][0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bfbdb97e-96ff-448f-b8f6-977e27a80cae",
-   "metadata": {},
-   "source": [
-    "### Graph: Distribution of End Time of Stakers in UnixTime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dab4427-b693-467e-849d-cad2bbf039e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#histogram x-axis round when starting participating\n",
-    "#how many bars in the histogram should be plotted\n",
-    "\n",
-    "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minOffEndtimeSec), np.log10(maxOffEndtimeSec), bin_size )\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.hist(time, bins = mybins)\n",
-    "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel(\"Unix Time\")\n",
-    "plt.ylabel(\"Number of Staker\")\n",
-    "plt.title(\"Distribution of Staker Ending to Participate (Unix Time)\", loc ='center', pad = None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Staker_End_Distribution_unixtime.jpg', dpi= 200)\n",
     "plt.show()\n",
     "plt.close()"
    ]
