topStakers Gold notebook

--- a/queries/notebooks/2_stakerDistribution.ipynb
+++ b/queries/notebooks/2_stakerDistribution.ipynb
@@ -828,6 +828,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9ed608e3-7788-45aa-a843-67f9448c6f39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # graph select only account balances, sort it from highest to lowest and take the highest 10 balances\n",
+    "    topStakers = dfStaker.select(\"proportion\", \"rewards_total\", \"addr\").sort(col(\"microalgos\").desc()).head(10)\n",
+    "\n",
+    "    # preparation for graph\n",
+    "\n",
+    "    topStakersProportion = [row[0] for (row) in topStakers]\n",
+    "    topStakersRewards = [row[1] for (row) in topStakers]\n",
+    "    topStakersRewardsAlgos = [row[1]/1000000 for (row) in topStakers]\n",
+    "    topStakersAddresses = [row[2] for (row) in topStakers]\n",
+    "\n",
+    "    # save the whales, the top 10 whales are saved in a list\n",
+    "    # the top 10 are plotted\n",
+    "    name = \"Staker \"\n",
+    "    plt.figure()\n",
+    "    for i in range(5):\n",
+    "        plt.bar(name + str(i), topStakersProportion[i], width=0.4)\n",
+    "\n",
+    "    plt.rcParams[\"figure.figsize\"] = (10, 5)\n",
+    "    plt.title(\"The 5 Biggest Stakers: Their Staking Rewards Compared to All Rewards (Proportion in pc)\", loc='center',\n",
+    "              pad=None)\n",
+    "\n",
+    "    plt.legend([topStakersAddresses[0], topStakersAddresses[1], topStakersAddresses[2], topStakersAddresses[3],\n",
+    "                topStakersAddresses[4]])\n",
+    "    plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/ProportionTopStakers.jpg', dpi=200)\n",
+    "    plt.show()\n",
+    "    plt.close()\n",
+    "\n",
+    "    # write the current whales in gold table\n",
+    "    column = [\"Address\", \"Proportion_in_pc\", \"Rewards_in_mAlgos\", \"Rewards_in_Algos\", \"CreationRound\"]\n",
+    "    result = spark.createDataFrame(zip(topStakersAddresses, topStakersProportion, topStakersRewards,\n",
+    "                                       topStakersRewardsAlgos, newestRoundStaker), column)\n",
+    "\n",
+    "    # write it back for metabase dashboard\n",
+    "    result.write.format(\"mongodb\") \\\n",
+    "        .option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
+    "        .mode(\"append\") \\\n",
+    "        .option('spark.mongodb.database', 'algorand_gold') \\\n",
+    "        .option('spark.mongodb.collection', 'TopStakers_2') \\\n",
+    "        .option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
+    "        .save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "50279100-81c5-4e57-ba8b-2f0e549f85ef",
    "metadata": {},
    "outputs": [],
