name fixing notebook

--- a/queries/notebooks/2_StakerDistribution.ipynb
+++ b/queries/notebooks/2_StakerDistribution.ipynb
@@ -630,8 +630,8 @@
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of Stakers\")\n",
-    "plt.title(\"Distribution of Staker Starting to Participate (Blockround)\", loc ='center', pad = None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Staker_Start_Distribution_Blockround.jpg', dpi= 200)\n",
+    "plt.title(\"Distribution of Nodes Participating Starting Blockround\", loc='center', pad=None)\n",
+    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Nodes_Start_Distribution_Blockround.jpg', dpi=200)\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -726,8 +726,8 @@
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of Staker\")\n",
-    "plt.title(\"Distribution of Staker Ending to Participate (Blockround)\", loc ='center', pad = None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Staker_End_Distribution_Blockround.jpg', dpi= 200)\n",
+    "plt.title(\"Distribution of Nodes Participating Ending Blockround\", loc='center', pad=None)\n",
+    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Nodes_End_Distribution_Blockround.jpg', dpi=200)\n",
     "plt.show()\n",
     "plt.close()"
    ]
