additional column whales notebook

--- a/queries/notebooks/3_BalanceDistribution.ipynb
+++ b/queries/notebooks/3_BalanceDistribution.ipynb
@@ -394,13 +394,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#graph select only account balances, sort it from highest to lowest and take the highest 10 balances\n",
-    "whalesData = dfAccounts.select(\"microalgos\", \"addr\").sort(col(\"microalgos\").desc()).head(10)\n",
+    "# graph select only account balances, sort it from highest to lowest and take the highest 10 balances\n",
+    "    whalesData = dfAccounts.select(\"addr\", \"microalgos\", \"proportion\").sort(col(\"microalgos\").desc()).head(10)\n",
     "\n",
-    "#preparation for graph\n",
-    "#convert row[\"data\"] to only data /1000 to reach algos from microalgos\n",
-    "whales = [row[0]/1000000 for (row) in whalesData]\n",
-    "whalesAddresses = [row[1] for (row) in whalesData]\n"
+    "    # preparation for graph\n",
+    "    # convert row[\"data\"] to only data /1000000 to reach algos from microalgos\n",
+    "    whalesAlgos = [row[1] / 1000000 for (row) in whalesData]\n",
+    "    whalesAddresses = [row[0] for (row) in whalesData]\n",
+    "    whalesProportion = [row[2] for (row) in whalesData]"
    ]
   },
   {
@@ -410,20 +411,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save the whales, the top 10 whales are saved in a list\n",
-    "#the top 10 are plotted\n",
-    "name = \"whale \"\n",
-    "plt.figure()\n",
-    "for i in range(5):\n",
-    "    plt.bar(name + str(i), whales[i], width = 0.4)\n",
+    "# save the whales, the top 10 whales are saved in a list\n",
+    "    # the top 10 are plotted\n",
+    "    name = \"whale \"\n",
+    "    plt.figure()\n",
+    "    for i in range(5):\n",
+    "        plt.bar(name + str(i), whalesAlgos[i], width=0.4)\n",
     "\n",
-    "plt.rcParams[\"figure.figsize\"] = (10, 5)\n",
-    "plt.title(\"5 Biggest Whales with their Account Balances in Algos\", loc ='center', pad = None)\n",
+    "    plt.rcParams[\"figure.figsize\"] = (10, 5)\n",
+    "    plt.title(\"5 Biggest Whales with their Account Balances in Algos\", loc='center', pad=None)\n",
     "\n",
-    "plt.legend([whalesAddresses[0], whalesAddresses[1], whalesAddresses[2],whalesAddresses[3],whalesAddresses[4]])\n",
-    "plt.savefig('/home/ubuntu/apps/figures/3_BalanceDistribution/Distribution_whales.jpg', dpi= 200)\n",
-    "plt.show()\n",
-    "plt.close()"
+    "    plt.legend([whalesAddresses[0], whalesAddresses[1], whalesAddresses[2], whalesAddresses[3], whalesAddresses[4]])\n",
+    "    plt.savefig('/home/ubuntu/apps/figures/3_BalanceDistribution/Distribution_whales.jpg', dpi=200)\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -433,18 +434,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#write the current whales in gold table\n",
-    "column = [\"Addresses\", \"Algos\"]\n",
-    "result = spark.createDataFrame(zip(whalesAddresses, whales), column)\n",
+    " # write the current whales in gold table\n",
+    "    column = [\"Address\", \"Algos\", \"Proportion\"]\n",
+    "    result = spark.createDataFrame(zip(whalesAddresses, whalesAlgos, whalesProportion), column)\n",
     "\n",
-    "#write it back for metabase dashboard\n",
-    "result.write.format(\"mongodb\") \\\n",
-    "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
-    "  \t.mode(\"overwrite\") \\\n",
-    "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
-    "  \t.option('spark.mongodb.collection', 'Distribution_whales_3') \\\n",
-    "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
-    "  \t.save()"
+    "    # write it back for metabase dashboard\n",
+    "    result.write.format(\"mongodb\") \\\n",
+    "        .option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
+    "        .mode(\"overwrite\") \\\n",
+    "        .option('spark.mongodb.database', 'algorand_gold') \\\n",
+    "        .option('spark.mongodb.collection', 'Distribution_whales_3') \\\n",
+    "        .option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
+    "        .save()"
    ]
   },
   {
