x axis log changes notebook

--- a/queries/notebooks/1_TransactionNetworkBatch.ipynb
+++ b/queries/notebooks/1_TransactionNetworkBatch.ipynb
@@ -541,13 +541,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5dd022a3",
+   "cell_type": "markdown",
+   "id": "97744d11-256b-495f-9376-55c00b93f750",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dfAssetConfigTx = dfTxn.filter(dfTxn.typeenum == 3) \\\n",
+    "#### dfAssetConfigTx = dfTxn.filter(dfTxn.typeenum == 3) \\\n",
     "                        .select(dfTxn.txid, \\\n",
     "                                dfTxn.round, \\\n",
     "                                dfTxn.intra, \\\n",
