--- a/queries/notebooks/2_stakerDistribution.ipynb
+++ b/queries/notebooks/2_stakerDistribution.ipynb
@@ -355,11 +355,11 @@
     "#how many stakers ever received a reward\n",
     "#append to get a history over the development\n",
     "addresses = dfStaker.count()\n",
-    "newestRound = dfStaker.agg(F.max(\"created_at\")).collect()[0][0]\n",
+    "newestRoundStaker = dfStaker.agg(F.max(\"created_at\")).collect()[0][0]\n",
     "\n",
     "result = spark.createDataFrame(\n",
     "    [\n",
-    "        (addresses, newestRound)  # create your data here, be consistent in the types.\n",
+    "        (addresses, newestRoundStaker)  # create your data here, be consistent in the types.\n",
     "        \n",
     "    ],\n",
     "    [\"NrOfAddresses\", \"CreationRound\"]  # add your column names here\n",
@@ -402,11 +402,11 @@
     "#write number of stakers in gold table\n",
     "#append to get a history over the development\n",
     "transactions = dfTx.count()\n",
-    "newestRound = dfTx.agg(F.max(\"applicationRound\")).collect()[0][0]\n",
+    "newestRoundTx = dfTx.agg(F.max(\"applicationRound\")).collect()[0][0]\n",
     "\n",
     "result = spark.createDataFrame(\n",
     "    [\n",
-    "        (transactions, newestRound)  # create your data here, be consistent in the types.\n",
+    "        (transactions, newestRoundTx)  # create your data here, be consistent in the types.\n",
     "        \n",
     "    ],\n",
     "    [\"NrOfTransactions\", \"CreationRound\"]  # add your column names here\n",
@@ -528,11 +528,11 @@
    "source": [
     "#counts how many transactions were sent from possible stakers to go online\n",
     "candidacies = dfOnline.count()\n",
-    "newestRound = dfOnline.agg(F.max(\"applicationRound\")).collect()[0][0]\n",
+    "newestRoundApp = dfOnline.agg(F.max(\"applicationRound\")).collect()[0][0]\n",
     "\n",
     "result = spark.createDataFrame(\n",
     "    [\n",
-    "        (candidacies, newestRound)  # create your data here, be consistent in the types.\n",
+    "        (candidacies, newestRoundApp)  # create your data here, be consistent in the types.\n",
     "        \n",
     "    ],\n",
     "    [\"TotalCandidates\", \"CreationRound\"]  # add your column names here\n",
@@ -621,12 +621,10 @@
     "\n",
     "bin_size = 50\n",
     "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minParticipationRound), np.log10(maxParticipationRound), bin_size )\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(rounds, bins = mybins)\n",
+    "plt.hist(rounds, bins = bin_size)\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of Stakers\")\n",
@@ -716,13 +714,11 @@
     "#how many bars in the histogram should be plotted\n",
     "\n",
     "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minOffParticipationRound), np.log10(maxOffParticipationRound), bin_size )\n",
+    "\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(roundsOffline, bins = mybins)\n",
+    "plt.hist(roundsOffline, bins = bin_size)\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of Staker\")\n",
@@ -833,7 +829,7 @@
    "outputs": [],
    "source": [
     "    # graph select only account balances, sort it from highest to lowest and take the highest 10 balances\n",
-    "    topStakers = dfStaker.select(\"proportion\", \"rewards_total\", \"addr\").sort(col(\"microalgos\").desc()).head(10)\n",
+    "    topStakers = dfStaker.select(\"proportion\", \"rewards_total\", \"addr\").sort(col(\"rewards_total\").desc()).head(10)\n",
     "\n",
     "    # preparation for graph\n",
     "\n",
@@ -876,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "50279100-81c5-4e57-ba8b-2f0e549f85ef",
    "metadata": {},
    "outputs": [],
