--- a/queries/notebooks/5_countFT_NFT.ipynb
+++ b/queries/notebooks/5_countFT_NFT.ipynb
@@ -382,13 +382,12 @@
     "#only the NFTs are taken into consideration, which are not already deleted\n",
     "#the plot is saved to the VM\n",
     "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minNFTrounds), np.log10(maxNFTrounds), bin_size )\n",
+    "\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(roundsNFT, bins = mybins)\n",
+    "plt.hist(roundsNFT, bins = bin_size)\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
+    "\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of NFTs\")\n",
@@ -473,13 +472,12 @@
    "source": [
     "#histogram x-axis round when creating NFT\n",
     "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minFTrounds), np.log10(maxFTrounds), bin_size )\n",
+    "\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(roundsFT, bins = mybins)\n",
+    "plt.hist(roundsFT, bins = bin_size)\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
+    "\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of FTs\")\n",
@@ -521,14 +519,13 @@
     "#only tokens taken into consideration which are still online\n",
     "#the graph is saved on the vm\n",
     "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minFTrounds), np.log10(maxFTrounds), bin_size)\n",
+    "\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(roundsNFT, bins = mybins, alpha =0.5, label = \"NFT\")\n",
-    "plt.hist(roundsFT, bins = mybins, alpha =0.5, label = \"FT\")\n",
+    "plt.hist(roundsNFT, bins = bin_size, alpha =0.5, label = \"NFT\")\n",
+    "plt.hist(roundsFT, bins = bin_size, alpha =0.5, label = \"FT\")\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
+    "\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of Tokens\")\n",
@@ -759,14 +756,13 @@
    "source": [
     "#histogram when all assets are created and when all assets are deleted\n",
     "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minRounds), np.log10(maxRounds), bin_size)\n",
+    "\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(roundsCreated, bins = mybins, alpha =0.5, label = \"created\")\n",
-    "plt.hist(roundsDeleted, bins = mybins, alpha =0.5, label = \"deleted\")\n",
+    "plt.hist(roundsCreated, bins = bin_size, alpha =0.5, label = \"created\")\n",
+    "plt.hist(roundsDeleted, bins = bin_size, alpha =0.5, label = \"deleted\")\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
+    "\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of Assets\")\n",
@@ -803,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "d8d3366e-2391-48f5-981d-9ce616b0856d",
    "metadata": {},
    "outputs": [],
