--- a/queries/notebooks/7_TransactionUseCaseDistribution.ipynb
+++ b/queries/notebooks/7_TransactionUseCaseDistribution.ipynb
@@ -314,19 +314,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f34b147-282d-4497-8e05-b1c5383c0715",
+   "id": "59ef7608-10b7-4cd6-9c8b-9431daeb4a3b",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure()\n",
     "for i in range(len(UCnames)):\n",
-    "    plt.bar(UCnames[i], UCvalues[i], width = 0.4)\n",
-    "    \n",
-    "plt.title(\"Smart Contract Use Case Transactions\", loc ='center', pad = None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/7_TransactionUC/TC_Use_Cases.jpg', dpi= 200)\n",
+    "    plt.bar(str(i), UCvalues[i], width=0.4)\n",
+    "plt.legend([\"0: \"+str(UCnames[0]), \"1: \"+str(UCnames[1]), \"2: \"+str(UCnames[2]), \"3: \"+str(UCnames[3]), \"4: \"+str(UCnames[4]), \"5: \"+str(UCnames[5])])\n",
+    "plt.title(\"Transactions Use Cases\", loc='center', pad=None)\n",
+    "plt.savefig('/home/ubuntu/apps/figures/7_TransactionUC/TC_Use_Cases.jpg', dpi=200)\n",
     "plt.show()\n",
     "plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6015f8dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c381af5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
