--- a/queries/notebooks/4_SmartContractCallDistribution.ipynb
+++ b/queries/notebooks/4_SmartContractCallDistribution.ipynb
@@ -60,7 +60,7 @@
     "    ('spark.worker.cleanup.enabled', 'true'),\n",
     "    ('spark.worker.cleanup.interval', '60'),\n",
     "    ('spark.shuffle.service.db.enabled', 'true'),\n",
-    "    ('spark.worker.cleanup.appDataTtl', '60'),\n",
+    "    ('spark.worker.cleanup.appDataTtl', '60rite'),\n",
     "    ('spark.jars.packages', 'org.mongodb.spark:mongo-spark-connector:10.0.2')\n",
     "])"
    ]
@@ -587,13 +587,12 @@
     "#how many bars in the histogram should be plotted\n",
     "\n",
     "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minSCround), np.log10(maxSCround), bin_size )\n",
+    "\n",
     "\n",
     "plt.figure()\n",
-    "plt.hist(SCcalls, bins = mybins)\n",
+    "plt.hist(SCcalls, bins = bin_size)\n",
     "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
+    "\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Blockround\")\n",
     "plt.ylabel(\"Number of Smart Contract Calls\")\n",
