updated pattern in query 6

--- a/queries/notebooks/6_PatternsInNetwork.ipynb
+++ b/queries/notebooks/6_PatternsInNetwork.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3cef39fe",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "53a449f1",
    "metadata": {},
    "outputs": [],
@@ -69,10 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a212c9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3889522 [Thread-4] WARN  org.apache.spark.util.Utils  - Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession \\\n",
     "    .builder \\\n",
@@ -95,7 +103,7 @@
    "id": "baab3672",
    "metadata": {},
    "source": [
-    "## Pattern 1: Large Payments in less than a Day"
+    "## Pattern 1: Large Payments"
    ]
   },
   {
@@ -124,7 +132,7 @@
     "RETURN senderAccount\n",
     "\"\"\"\n",
     "\n",
-    "queryAllData = \"\"\"\n",
+    "query1 = \"\"\"\n",
     "MATCH (a1:Account)-[r1:PAYMENT]->(a2:Account)-[r2:PAYMENT]->(a3:Account)\n",
     "USING INDEX r1:PAYMENT(amount)\n",
     "USING INDEX r2:PAYMENT(amount)\n",
@@ -135,7 +143,7 @@
     "\n",
     "dfPattern1 = spark.read.format(\"org.neo4j.spark.DataSource\") \\\n",
     "  .option(\"url\", \"bolt://172.23.149.212:7687\") \\\n",
-    "  .option(\"query\", queryAllData) \\\n",
+    "  .option(\"query\", query1) \\\n",
     "  .load() "
    ]
   },
@@ -178,7 +186,7 @@
     "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
     "  \t.mode(\"overwrite\") \\\n",
     "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
-    "  \t.option('spark.mongodb.collection', 'Patterns_LargePaymentTransactionAccounts_6') \\\n",
+    "  \t.option('spark.mongodb.collection', 'Patterns_LargePaymentTransactionAcc_6') \\\n",
     "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
     "  \t.save()"
    ]
@@ -208,9 +216,6 @@
    "source": [
     "# for full data query remove the LIMIT 10 phrase\n",
     "\n",
-    "# diejenigen die viel kreieren in asset configuration\n",
-    "# diejenigen finden welche wie oben das gleiche asset weiter transferiert haben in kurzer zeit, mischung aus 1 und 3\n",
-    "\n",
     "query = \"\"\"\n",
     "MATCH (a1:Account)-[r:ASSET_TRANSFER]->(a2:Account)\n",
     "USING INDEX r:ASSET_TRANSFER(transferType)\n",
@@ -220,7 +225,7 @@
     "ORDER BY rel_count DESC \n",
     "\"\"\"\n",
     "\n",
-    "queryAllData = \"\"\"\n",
+    "query2 = \"\"\"\n",
     "MATCH (a1:Account)-[r:ASSET_TRANSFER]->(a2:Account)\n",
     "USING INDEX r:ASSET_TRANSFER(transferType)\n",
     "WHERE a1.account <> a2.account AND r.transferType=\"transfer\"\n",
@@ -231,7 +236,7 @@
     "\n",
     "dfPattern2 = spark.read.format(\"org.neo4j.spark.DataSource\") \\\n",
     "  .option(\"url\", \"bolt://172.23.149.212:7687\") \\\n",
-    "  .option(\"query\", queryAllData) \\\n",
+    "  .option(\"query\", query2) \\\n",
     "  .load()"
    ]
   },
@@ -310,7 +315,7 @@
     "ORDER BY rel_count DESC\n",
     "\"\"\"\n",
     "\n",
-    "queryAllData = \"\"\"\n",
+    "query3 = \"\"\"\n",
     "MATCH (a1:Account)-[r:ASSET_CONFIGURATION]->(a2:Asset)\n",
     "WHERE r.configurationType = \"creation\"\n",
     "WITH a1.account AS senderAccount, count(r) AS rel_count\n",
@@ -320,7 +325,7 @@
     "\n",
     "dfPattern3 = spark.read.format(\"org.neo4j.spark.DataSource\") \\\n",
     "  .option(\"url\", \"bolt://172.23.149.212:7687\") \\\n",
-    "  .option(\"query\", queryAllData) \\\n",
+    "  .option(\"query\", query3) \\\n",
     "  .load() "
    ]
   },
@@ -355,7 +360,7 @@
    "id": "2090e7a2",
    "metadata": {},
    "source": [
-    "## Pattern 4: SmartContract calls where other people have called the same SC shortly after"
+    "## Pattern 4: SmartContract calls where the same people have configured a SC"
    ]
   },
   {
@@ -363,12 +368,12 @@
    "id": "424d624b",
    "metadata": {},
    "source": [
-    "The goal of this pattern is to detect smart contracts and people that have all sent transactions to the same SC in a short amount of time."
+    "The goal of this pattern is to detect smart contracts and people that have all sent update transactions to the same SC."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ae79a8fd",
    "metadata": {},
    "outputs": [],
@@ -377,34 +382,65 @@
     "\n",
     "query = \"\"\"\n",
     "MATCH (a1:Account)-[r1:APPLICATION_CALL]->(app:Application)<-[r2:APPLICATION_CALL]-(a2:Account)\n",
-    "USING INDEX r1:APPLICATION_CALL(blockNumber)\n",
-    "USING INDEX r2:APPLICATION_CALL(blockNumber)\n",
-    "WHERE a1.account <> a2.account AND r1.blockNumber > 0 AND r2.blockNumber > 0 AND abs(r2.blockNumber - r1.blockNumber) < 17280 \n",
-    "WITH a1.account AS account, app.application AS application, r1.blockNumber as blockNumber LIMIT 100 \n",
-    "RETURN DISTINCT application, account, blockNumber\n",
+    "USING INDEX r1:APPLICATION_CALL(applicationCallType)\n",
+    "USING INDEX r2:APPLICATION_CALL(applicationCallType)\n",
+    "WHERE a1.account <> a2.account AND r1.applicationCallType = \"update\" AND r2.applicationCallType = \"update\"\n",
+    "WITH  DISTINCT app.application AS application, a1.account AS account1, a2.account AS account2 limit 10\n",
+    "RETURN DISTINCT application, account1\n",
+    "ORDER BY application\n",
     "\"\"\"\n",
     "\n",
-    "queryAllData = \"\"\"\n",
+    "query4 = \"\"\"\n",
     "MATCH (a1:Account)-[r1:APPLICATION_CALL]->(app:Application)<-[r2:APPLICATION_CALL]-(a2:Account)\n",
-    "USING INDEX r1:APPLICATION_CALL(blockNumber)\n",
-    "USING INDEX r2:APPLICATION_CALL(blockNumber)\n",
-    "WHERE a1.account <> a2.account AND r1.blockNumber > 0 AND r2.blockNumber > 0 AND abs(r2.blockNumber - r1.blockNumber) < 17280 \n",
-    "WITH a1.account AS account, app.application AS application, r1.blockNumber as blockNumber\n",
-    "RETURN DISTINCT application, account, blockNumber\n",
+    "USING INDEX r1:APPLICATION_CALL(applicationCallType)\n",
+    "USING INDEX r2:APPLICATION_CALL(applicationCallType)\n",
+    "WHERE a1.account <> a2.account AND r1.applicationCallType = \"update\" AND r2.applicationCallType = \"update\"\n",
+    "WITH  DISTINCT app.application AS application, a1.account AS account1, a2.account AS account2\n",
+    "RETURN DISTINCT application, account1\n",
+    "ORDER BY application\n",
     "\"\"\"\n",
     "\n",
     "dfPattern4 = spark.read.format(\"org.neo4j.spark.DataSource\") \\\n",
     "  .option(\"url\", \"bolt://172.23.149.212:7687\") \\\n",
-    "  .option(\"query\", queryAllData) \\\n",
+    "  .option(\"query\", query4) \\\n",
     "  .load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9672c60c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+--------------------+\n",
+      "|application|            account1|\n",
+      "+-----------+--------------------+\n",
+      "|  233725844|o7pkVg4K6ZLx1dK3l...|\n",
+      "|  233725844|mJdZ5SklTQs01/eo1...|\n",
+      "|  233725848|y0S8BKnWtPAzchA98...|\n",
+      "|  233725848|IB0dV8+P0rdBc27Kn...|\n",
+      "|  233725848|mJdZ5SklTQs01/eo1...|\n",
+      "|  233725850|o7pkVg4K6ZLx1dK3l...|\n",
+      "|  233725850|mJdZ5SklTQs01/eo1...|\n",
+      "+-----------+--------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 1:>                                                          (0 + 1) / 1]\r",
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "dfPattern4.show()"
    ]
@@ -419,68 +455,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "21bc9776",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22662074 [Thread-64] WARN  org.apache.spark.sql.util.CaseInsensitiveStringMap  - Converting duplicated key forcedeletetempcheckpointlocation into CaseInsensitiveStringMap.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "dfPattern4.write.format(\"mongodb\") \\\n",
     "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
     "  \t.mode(\"overwrite\") \\\n",
-    "    .option('spark.mongodb.database', 'algorand_silver') \\\n",
-    "  \t.option('spark.mongodb.collection', 'Patterns_ScCallsFromDifferentAccRaw_6') \\\n",
-    "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
-    "  \t.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9502741",
-   "metadata": {},
-   "source": [
-    "Group and count the applications."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "380022b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfPattern4Grouped = dfPattern4.groupBy(\"application\").count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9983a1db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfPattern4Grouped.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce67a3eb",
-   "metadata": {},
-   "source": [
-    "Write grouped results to MongoDB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5747fac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfPattern4Grouped.write.format(\"mongodb\") \\\n",
-    "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
-    "  \t.mode(\"overwrite\") \\\n",
     "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
-    "  \t.option('spark.mongodb.collection', 'Patterns_ScCallsGrouped_6') \\\n",
+    "  \t.option('spark.mongodb.collection', 'Patterns_ScUpdatesFromDifferentAcc_6') \\\n",
     "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
     "  \t.save()"
    ]
@@ -519,7 +518,7 @@
     "ORDER BY rel_count DESC\n",
     "\"\"\"\n",
     "\n",
-    "queryAllData = \"\"\"\n",
+    "query5 = \"\"\"\n",
     "MATCH (a1:Account)-[r:PAYMENT]->(a2:Account) \n",
     "WHERE r.amount < 100000 AND a1.account <> a2.account \n",
     "WITH count(r) AS rel_count, a1.account AS senderAccount, a2.account AS receiverAccount\n",
@@ -530,7 +529,7 @@
     "\n",
     "dfPattern5 = spark.read.format(\"org.neo4j.spark.DataSource\") \\\n",
     "  .option(\"url\", \"bolt://172.23.149.212:7687\") \\\n",
-    "  .option(\"query\", queryAllData) \\\n",
+    "  .option(\"query\", query5) \\\n",
     "  .load()"
    ]
   },
@@ -562,8 +561,8 @@
     "dfPattern5.write.format(\"mongodb\") \\\n",
     "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
     "  \t.mode(\"overwrite\") \\\n",
-    "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
-    "  \t.option('spark.mongodb.collection', 'Patterns_AccountsWithManyPaymentTransactions_6') \\\n",
+    "    .option('spark.mongodb.database', 'algorand_silver') \\\n",
+    "  \t.option('spark.mongodb.collection', 'Patterns_AccWithManyPaymentTxs_6') \\\n",
     "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
     "  \t.save()"
    ]
@@ -607,7 +606,7 @@
     "\t.option('spark.mongodb.connection.uri', 'mongodb://172.23.149.212:27017') \\\n",
     "  \t.mode(\"overwrite\") \\\n",
     "    .option('spark.mongodb.database', 'algorand_gold') \\\n",
-    "  \t.option('spark.mongodb.collection', 'Patterns_AccWithManyPaymentTransactionsSum_6') \\\n",
+    "  \t.option('spark.mongodb.collection', 'Patterns_AccWithManyPaymentTxsSum_6') \\\n",
     "  \t.option(\"forceDeleteTempCheckpointLocation\", \"true\") \\\n",
     "  \t.save()"
    ]
@@ -679,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
+    "query6 = \"\"\"\n",
     "CALL gds.degree.stream('paymentGraph')\n",
     "YIELD nodeId, score\n",
     "WITH gds.util.asNode(nodeId).account AS account, score AS degree\n",
@@ -689,7 +688,7 @@
     "\n",
     "dfPattern6 = spark.read.format(\"org.neo4j.spark.DataSource\") \\\n",
     "  .option(\"url\", \"bolt://172.23.149.212:7687\") \\\n",
-    "  .option(\"query\", query) \\\n",
+    "  .option(\"query\", query6) \\\n",
     "  .option(\"partitions\", \"1\") \\\n",
     "  .load()"
    ]
@@ -743,7 +742,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
+    "query7 = \"\"\"\n",
     "CALL gds.eigenvector.stream('paymentGraph')\n",
     "YIELD nodeId, score\n",
     "WITH gds.util.asNode(nodeId).account AS account, score AS eigenVectorScore\n",
@@ -753,7 +752,7 @@
     "\n",
     "dfPattern7 = spark.read.format(\"org.neo4j.spark.DataSource\") \\\n",
     "  .option(\"url\", \"bolt://172.23.149.212:7687\") \\\n",
-    "  .option(\"query\", query) \\\n",
+    "  .option(\"query\", query7) \\\n",
     "  .option(\"partitions\", \"1\") \\\n",
     "  .load()"
    ]
@@ -821,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "64683194",
    "metadata": {},
    "outputs": [],
