--- a/queries/notebooks/7_TransactionUseCaseDistribution.ipynb
+++ b/queries/notebooks/7_TransactionUseCaseDistribution.ipynb
@@ -330,13 +330,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "6015f8dc",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "spark.stop()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
