updated pattern 5 in query 6

--- a/queries/notebooks/6_PatternsInNetwork.ipynb
+++ b/queries/notebooks/6_PatternsInNetwork.ipynb
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3889522 [Thread-4] WARN  org.apache.spark.util.Utils  - Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "20930975 [Thread-4] WARN  org.apache.spark.util.Utils  - Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9403b022",
    "metadata": {},
    "outputs": [],
@@ -535,10 +535,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "15b12f91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 0:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+---------+\n",
+      "|       senderAccount|     receiverAccount|rel_count|\n",
+      "+--------------------+--------------------+---------+\n",
+      "|7OUGoX3hg950O7LF5...|oQY98gUjLRNgQVqyg...|    19306|\n",
+      "|7OUGoX3hg950O7LF5...|iRhe80TuSql+RpNPP...|    19306|\n",
+      "|7OUGoX3hg950O7LF5...|xQbYMccFxcDsIGRYy...|    19306|\n",
+      "|7OUGoX3hg950O7LF5...|1YbO3KX7m2KBrydeF...|    19305|\n",
+      "|7OUGoX3hg950O7LF5...|aCYVTqsazIyWyYgpo...|    16755|\n",
+      "|7OUGoX3hg950O7LF5...|hTapIPF+i+W+MImEO...|    16755|\n",
+      "|7OUGoX3hg950O7LF5...|x8IMpA860wzXTCVAG...|    16754|\n",
+      "|7OUGoX3hg950O7LF5...|jA0BZe0eV6eA+fid3...|    16754|\n",
+      "|7OUGoX3hg950O7LF5...|+oR7zi4ucUJZCVWHc...|    16754|\n",
+      "|7OUGoX3hg950O7LF5...|xjQhuSoCIUsugjmaV...|    16753|\n",
+      "+--------------------+--------------------+---------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "dfPattern5.show()"
    ]
@@ -577,20 +615,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d6c3cf03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfPattern5Summed = dfPattern5.groupBy(\"senderAccount\").sum(\"rel_count\")"
+    "dfPattern5Summed = dfPattern5.groupBy(\"senderAccount\").sum(\"rel_count\").sort(col(\"sum(rel_count)\").desc())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6c79e8bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 1:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------+\n",
+      "|       senderAccount|sum(rel_count)|\n",
+      "+--------------------+--------------+\n",
+      "|7OUGoX3hg950O7LF5...|        177748|\n",
+      "+--------------------+--------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "dfPattern5Summed.show()"
    ]
@@ -820,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "64683194",
    "metadata": {},
    "outputs": [],
