--- a/queries/notebooks/2_stakerDistribution.ipynb
+++ b/queries/notebooks/2_stakerDistribution.ipynb
@@ -596,9 +596,9 @@
    "outputs": [],
    "source": [
     "#min\n",
-    "minParticipationRound = dfOnline.agg(F.min(\"participationRound\")).collect()[0][0]\n",
+    "minParticipationRound = dfOnline.agg(F.min(\"applicationRound\")).collect()[0][0]\n",
     "\n",
-    "maxParticipationRound = dfOnline.agg(F.max(\"participationRound\")).collect()[0][0]"
+    "maxParticipationRound = newestRoundApp"
    ]
   },
   {
@@ -858,7 +858,7 @@
     "    # write the current whales in gold table\n",
     "    column = [\"Address\", \"Proportion_in_pc\", \"Rewards_in_mAlgos\", \"Rewards_in_Algos\", \"CreationRound\"]\n",
     "    result = spark.createDataFrame(zip(topStakersAddresses, topStakersProportion, topStakersRewards,\n",
-    "                                       topStakersRewardsAlgos, newestRoundStaker), column)\n",
+    "                                       topStakersRewardsAlgos, F.lit(newestRoundStaker)), column)\n",
     "\n",
     "    # write it back for metabase dashboard\n",
     "    result.write.format(\"mongodb\") \\\n",
