--- a/queries/notebooks/2_stakerDistribution.ipynb
+++ b/queries/notebooks/2_stakerDistribution.ipynb
@@ -616,22 +616,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#histogram x-axis round when starting participating\n",
-    "#how many bars in the histogram should be plotted\n",
+    "    # histogram x-axis round when starting participating\n",
+    "    # how many bars in the histogram should be plotted\n",
     "\n",
-    "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
+    "    bin_size = 50\n",
+    "    # distribute bins log(equally) over the whole data\n",
     "\n",
-    "plt.figure()\n",
-    "plt.hist(rounds, bins = bin_size)\n",
-    "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel(\"Blockround\")\n",
-    "plt.ylabel(\"Number of Stakers\")\n",
-    "plt.title(\"Distribution of Nodes Participating Starting Blockround\", loc='center', pad=None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Nodes_Start_Distribution_Blockround.jpg', dpi=200)\n",
-    "plt.show()\n",
-    "plt.close()"
+    "    plt.figure()\n",
+    "    plt.hist(rounds, bins=bin_size)\n",
+    "    plt.rcParams[\"figure.autolayout\"] = True\n",
+    "    plt.yscale('log')\n",
+    "    plt.xlabel(\"Blockround\")\n",
+    "    plt.ylabel(\"Number of Nodes\")\n",
+    "    plt.title(\"Distribution of Nodes Participating Starting Blockround\", loc='center', pad=None)\n",
+    "    plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Nodes_Start_Distribution_Blockround.jpg', dpi=200)\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -710,22 +710,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#histogram x-axis round when starting participating\n",
-    "#how many bars in the histogram should be plotted\n",
+    "    # histogram x-axis round when starting participating\n",
+    "    # how many bars in the histogram should be plotted\n",
     "\n",
-    "bin_size = 50\n",
+    "    bin_size = 50\n",
     "\n",
+    "    plt.figure()\n",
+    "    plt.hist(roundsOffline, bins=bin_size)\n",
+    "    plt.rcParams[\"figure.autolayout\"] = True\n",
+    "    plt.yscale('log')\n",
+    "    plt.xlabel(\"Blockround\")\n",
+    "    plt.ylabel(\"Number of Nodes\")\n",
+    "    plt.title(\"Distribution of Nodes Participating Ending Blockround\", loc='center', pad=None)\n",
+    "    plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Nodes_End_Distribution_Blockround.jpg', dpi=200)\n",
+    "    plt.show()\n",
+    "    plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5da3b7ee-a502-42cd-8166-605171d81a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # histogram x-axis round when starting vs ending to participate in the consensus\n",
+    "    # the graph is saved on the vm\n",
+    "    bin_size = 50\n",
     "\n",
-    "plt.figure()\n",
-    "plt.hist(roundsOffline, bins = bin_size)\n",
-    "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel(\"Blockround\")\n",
-    "plt.ylabel(\"Number of Staker\")\n",
-    "plt.title(\"Distribution of Nodes Participating Ending Blockround\", loc='center', pad=None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Nodes_End_Distribution_Blockround.jpg', dpi=200)\n",
-    "plt.show()\n",
-    "plt.close()"
+    "    plt.figure()\n",
+    "    plt.hist(rounds, bins=bin_size, alpha=0.5, label=\"NFT\")\n",
+    "    plt.hist(roundsOffline, bins=bin_size, alpha=0.5, label=\"FT\")\n",
+    "    plt.rcParams[\"figure.autolayout\"] = True\n",
+    "    plt.yscale('log')\n",
+    "    plt.xlabel(\"Blockround\")\n",
+    "    plt.ylabel(\"Number of Nodes\")\n",
+    "    plt.legend(loc=\"upper right\")\n",
+    "    plt.title(\"Nodes Starting vs. Ending in the Consensus\", loc='center', pad=None)\n",
+    "    plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Starting_vs_Ending_Consensus.jpg', dpi=200)\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -801,24 +825,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#histogram x-axis round when starting participating\n",
-    "#how many bars in the histogram should be plotted\n",
+    " # histogram x-axis round when starting participating\n",
+    "    # how many bars in the histogram should be plotted\n",
     "\n",
-    "bin_size = 50\n",
-    "#distribute bins log(equally) over the whole data\n",
-    "mybins = np.logspace(np.log10(minRewards), np.log10(maxRewards), bin_size )\n",
+    "    bin_size = 50\n",
+    "    # distribute bins log(equally) over the whole data\n",
+    "    mybins = np.logspace(np.log10(minRewards), np.log10(maxRewards), bin_size)\n",
     "\n",
-    "plt.figure()\n",
-    "plt.hist(rewards, bins = mybins)\n",
-    "plt.rcParams[\"figure.autolayout\"] = True\n",
-    "plt.xscale('log')\n",
-    "plt.yscale('log')\n",
-    "plt.xlabel(\"Microalgos\")\n",
-    "plt.ylabel(\"Number of Staker\")\n",
-    "plt.title(\"Staker Reward Distribution\", loc ='center', pad = None)\n",
-    "plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Staker_reward_distribution.jpg', dpi= 200)\n",
-    "plt.show()\n",
-    "plt.close()"
+    "    plt.figure()\n",
+    "    plt.hist(rewards, bins=mybins)\n",
+    "    plt.rcParams[\"figure.autolayout\"] = True\n",
+    "    plt.xscale('log')\n",
+    "    plt.yscale('log')\n",
+    "    plt.xlabel(\"Microalgos\")\n",
+    "    plt.ylabel(\"Number of Nodes\")\n",
+    "    plt.title(\"Reward Distribution\", loc='center', pad=None)\n",
+    "    plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/Staker_reward_distribution.jpg', dpi=200)\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   },
   {
@@ -838,17 +862,17 @@
     "    topStakersRewardsAlgos = [row[1]/1000000 for (row) in topStakers]\n",
     "    topStakersAddresses = [row[2] for (row) in topStakers]\n",
     "\n",
-    "    # save the whales, the top 10 whales are saved in a list\n",
+    "   # save the whales, the top 10 whales are saved in a list\n",
     "    # the top 10 are plotted\n",
-    "    name = \"Staker \"\n",
+    "    name = \"Node \"\n",
     "    plt.figure()\n",
     "    for i in range(5):\n",
     "        plt.bar(name + str(i), topStakersProportion[i], width=0.4)\n",
     "\n",
     "    plt.rcParams[\"figure.figsize\"] = (10, 5)\n",
-    "    plt.title(\"The 5 Biggest Stakers: Their Staking Rewards Compared to All Rewards (Proportion in pc)\", loc='center',\n",
+    "    plt.title(\"The Nodes with the Biggest Rewards Compared to All Rewards\", loc='center',\n",
     "              pad=None)\n",
-    "\n",
+    "    plt.ylabel(\"Proportion in %\")\n",
     "    plt.legend([topStakersAddresses[0], topStakersAddresses[1], topStakersAddresses[2], topStakersAddresses[3],\n",
     "                topStakersAddresses[4]])\n",
     "    plt.savefig('/home/ubuntu/apps/figures/2_stakerDistribution/ProportionTopStakers.jpg', dpi=200)\n",
